add hero and advertisement sections

--- a/index.html
+++ b/index.html
@@ -14,34 +14,35 @@
     <title>Macaronsmania</title>
   </head>
   <body>
-    <header>
-      <div class="container arranged">
-        <a href="#" class="logo">
-          <div class="logo__image"></div>
-          <p class="logo__text">Macaronsmania</p></a
-        >
+    <div class="background-wrapper">
+      <header>
+        <div class="container arranged">
+          <a href="#" class="logo">
+            <div class="logo__image"></div>
+            <p class="logo__text">Macaronsmania</p></a
+          >
 
-        <nav class="nav">
-          <ul class="nav__list">
-            <a href="#" class="nav__link"><li class="nav__item">Home</li></a>
-            <a href="#" class="nav__link"
-              ><li class="nav__item">About us</li></a
-            >
-            <a href="#" class="nav__link"><li class="nav__item">Menu</li></a>
-            <a href="#" class="nav__link"><li class="nav__item">Contact</li></a>
-            <a href="#" class="nav__link"
-              ><li class="nav__item">+123456789</li></a
-            >
-          </ul>
-        </nav>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">About us</a>
+              </li>
+              <li class="nav__item"><a href="#" class="nav__link">Menu</a></li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Contact</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">+123456789</a>
+              </li>
+            </ul>
+          </nav>
 
-        <a href="#" class="bag-link">
-          <div class="bag-image"></div>
-        </a>
-      </div>
-    </header>
-
-    <main>
+          <a href="#" class="bag-link">
+            <div class="bag-image"></div>
+          </a>
+        </div>
+      </header>
       <section>
         <div class="container">
           <h1 class="hero-title">Welcome ın our store</h1>
@@ -51,6 +52,49 @@
           </p>
         </div>
       </section>
-    </main>
+    </div>
+
+    <section>
+      <div class="container">
+        <h2 class="advert-title">Why choose us?</h2>
+        <p class="advert-description">
+          You will choose us because we know how to surprise you, we always have
+          high quality <br />
+          products.
+        </p>
+        <ul class="advantages">
+          <li class="advantages__item">
+            <div class="advantages__image"></div>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__title">High Quality</h3>
+              <p class="advantages__description">
+                All our products are of high quality. We purchase products only
+                from verified suppliers.
+              </p>
+            </div>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages__image"></div>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__title">Variety</h3>
+              <p class="advantages__description">
+                We have about 25 different flavors of macarons. Every day we
+                come up with different flavors so that you can enjoy macarons.
+              </p>
+            </div>
+          </li>
+          <li class="advantages__item">
+            <div class="advantages__image"></div>
+            <div class="advantages__wrapper">
+              <h3 class="advantages__title">Delivery</h3>
+              <p class="advantages__description">
+                If you want to try our macarons outside our pastry shop, we can
+                deliver them to you in a short time.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
