add menu section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
         </p>
         <ul class="advantages">
           <li class="advantages__item">
-            <div class="advantages__image"></div>
+            <div class="advantages__image-wrap">
+              <img
+                src="./images/quality.png"
+                alt="Quality sing"
+                class="advantages__image"
+              />
+            </div>
             <div class="advantages__wrapper">
               <h3 class="advantages__title">High Quality</h3>
               <p class="advantages__description">
@@ -74,7 +80,13 @@
             </div>
           </li>
           <li class="advantages__item">
-            <div class="advantages__image"></div>
+            <div class="advantages__image-wrap">
+              <img
+                src="./images/macarons.png"
+                alt="Quality sing"
+                class="advantages__image"
+              />
+            </div>
             <div class="advantages__wrapper">
               <h3 class="advantages__title">Variety</h3>
               <p class="advantages__description">
@@ -84,7 +96,13 @@
             </div>
           </li>
           <li class="advantages__item">
-            <div class="advantages__image"></div>
+            <div class="advantages__image-wrap">
+              <img
+                src="./images/truck.png"
+                alt="Quality sing"
+                class="advantages__image"
+              />
+            </div>
             <div class="advantages__wrapper">
               <h3 class="advantages__title">Delivery</h3>
               <p class="advantages__description">
@@ -93,6 +111,77 @@
               </p>
             </div>
           </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="wrapper">
+      <div class="container">
+        <h2 class="menu-title">Our Menu</h2>
+        <p class="menu-description">
+          Here you can view the currently available macaron flavors and order.
+        </p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img
+              src="./images/heart.png"
+              alt="Heart image as a save option"
+              class="cards__save"
+            />
+
+            <img
+              src="./images/product.png"
+              alt="Macaron"
+              class="cards__product"
+            />
+            <div class="cards__background">
+              <h3 class="cards__title">Macarons with berry ganache</h3>
+            </div>
+            <p class="cards__description">Price: 1.50$</p>
+            <button type="button" class="cards__button">Add</button>
+          </li>
+          <li class="cards__item">
+            <img
+              src="./images/heart.png"
+              alt="Heart image as a save option"
+              class="cards__save"
+            />
+
+            <img
+              src="./images/product.png"
+              alt="Macaron"
+              class="cards__product"
+            />
+            <div class="cards__background">
+              <h3 class="cards__title">Macarons with chocolate ganache</h3>
+            </div>
+            <p class="cards__description">Price: 1.25$</p>
+            <button type="button" class="cards__button">Add</button>
+          </li>
+          <li class="cards__item">
+            <img
+              src="./images/heart.png"
+              alt="Heart image as a save option"
+              class="cards__save"
+            />
+
+            <img
+              src="./images/product.png"
+              alt="Macaron"
+              class="cards__product"
+            />
+            <div class="cards__background">
+              <h3 class="cards__title">Macarons with matcha tea and lime</h3>
+            </div>
+            <p class="cards__description">Price: 1$</p>
+            <button type="button" class="cards__button">Add</button>
+          </li>
+        </ul>
+        <ul class="dots">
+          <li class="dots__item"><div class="dots__circle first"></div></li>
+          <li class="dots__item"><div class="dots__circle"></div></li>
+          <li class="dots__item"><div class="dots__circle"></div></li>
+          <li class="dots__item"><div class="dots__circle"></div></li>
         </ul>
       </div>
     </section>
